<resources>
    <string name="app_name">Agriculture Money Manager</string>
    <string name="facebook_application_id" translatable="false">477780356018162</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb477780356018162</string>
    <string name="loan">Loan</string>
    <string name="extra">Extra</string>
    <string name="crop">Crop</string>
    <string name="my_crops">My Crops</string>
    <string name="ok">OK</string>
    <string name="add_partner">Add Partner</string>
    <string name="cancel">Cancel</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="add_service_provider">Add Service Provider</string>
    <string name="service_type_optional">Service Type (Optional)</string>
    <string name="add_crop">Add Crop</string>
    <string name="year_of_sowing">Year of Sowing</string>
    <string name="year_of_reaping">Year of Reaping</string>
    <string name="crop_type">Crop Type</string>
    <string name="partner_name">Partner Name</string>
    <string name="sharing_percentage">Sharing Percentage</string>
    <string name="crop_name">Crop Name</string>
    <string name="single_crop_title">Single Crop Title</string>
    <string name="sowing">Sowing</string>
    <string name="on_a_standing_crop">On A Standing Crop</string>
    <string name="reaping_crop">Reaping Crop</string>
    <string name="report">Report</string>
    <string name="sowing_crop">Sowing Crop</string>
    <string name="crop_income">Crop Income</string>
    <string name="area_of_land">Area of Land</string>
    <string name="name_of_partner_1">Name of Partner 1</string>
    <string name="sharing_percentage_of_partner_1">Sharing Percentage of Partner 1</string>
    <string name="name_of_partner_2">Name of Partner 2</string>
    <string name="sharing_percentage_of_partner_2">Sharing Percentage of Partner 2</string>
    <string name="name_of_partner_3">Name of Partner 3</string>
    <string name="sharing_percentage_of_partner_3">Sharing Percentage of Partner 3</string>
    <string name="name_of_partner_4">Name of Partner 4</string>
    <string name="sharing_percentage_partner_4">Sharing Percentage Partner 4</string>
    <string name="name_of_partner_5">Name of Partner 5</string>
    <string name="sharing_percentage_of_partner_5">Sharing Percentage of Partner 5</string>
    <string name="please_choose_any_date">Please Choose Any Date</string>
    <string name="error">Error!!</string>
    <string name="something_is_wrong">Something is Wrong!!</string>
    <string name="try_again_later_or_send_feedback">Try Again Later or Send Feedback!!</string>
    <string name="remark">Remark</string>
    <string name="amount">Amount</string>
    <string name="area_of_land_optional">Area of Land(Optional)</string>
    <string name="service_provider_name">Service Provider Name</string>
    <string name="cash">Cash</string>
    <string name="borrow">Borrow</string>
    <string name="paid_by_partner">Paid By Partner</string>
    <string name="choose_date">Choose Date</string>
    <string name="no_date_selected">No Date Selected</string>
    <string name="save">Save</string>
    <string name="service_provider">Service Provider</string>
    <string name="partner">Partner</string>
    <string name="buyer">Buyer</string>
    <string name="add_buyer">Add Buyer</string>
    <string name="in_partnership">In Partnership</string>
    <string name="income_of_crop">Income of Crop</string>
    <string name="rate_per_weight">Rate Per Weight</string>
    <string name="weight">Weight</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="sharing_amount_with">Sharing Amount With</string>
    <string name="sharing_percentage_with">Sharing Percentage With</string>
    <string name="my_income">My Income</string>
    <string name="filter">Filter</string>
    <string name="partners">Partners</string>
    <string name="number_of_partners">Number Of Partners</string>
    <string name="edit_crop">Edit Crop</string>
    <string name="sowing_crop_history">Sowing Crop History</string>
    <string name="on_a_standing_crop_history">On A Standing Crop History</string>
    <string name="reaping_crop_history">Reaping Crop History</string>
    <string name="crop_income_history">Crop Income History</string>
    <string name="min_amount">Min Amount</string>
    <string name="max_amount">Max Amount</string>
    <string name="date_filter_type">Date Filter Type</string>
    <string name="between_dates">Between Dates</string>
    <string name="single_date">Single Date</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="min_rate">Min Rate</string>
    <string name="max_rate">Max Rate</string>
    <string name="date">Date</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="paid_by">Paid By</string>
    <string name="me">ME</string>
    <string name="undo">Undo</string>
    <string name="remaining_amount">Remaining Amount</string>
    <string name="pay">Pay</string>
    <string name="history_of_pay">History of Pay</string>
    <string name="paying_amount">Paying Amount</string>
    <string name="fill_it">Fill It</string>
    <string name="share">Share</string>
    <string name="history_of_service">History of Service</string>
    <string name="service">Service</string>
    <string name="add_loan_person">Add Loan Person</string>
    <string name="new_loan">New Loan</string>
    <string name="loan_person">Loan Person</string>
    <string name="get_loan_list">Get Loan List</string>
    <string name="give_loan_list">Give Loan List</string>
    <string name="get_type">Get</string>
    <string name="give_type">Give</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="interest_rate_per_month">Interest Rate Per Month</string>
    <string name="interest_rate_per_year">Interest Rate Per Year</string>
    <string name="simple_interest">Simple Interest</string>
    <string name="yearly_compound">Yearly Compound</string>
    <string name="six_monthly_compound">Six Monthly Compound</string>
    <string name="three_monthly_compound">Three Monthly Compound</string>
    <string name="select_interest_type">Select Interest Type</string>
    <string name="make_loan">Make Loan</string>
    <string name="min_interest_rate">Min Interest Rate</string>
    <string name="max_interest_rate">Max Interest Rate</string>
    <string name="interest_rate_type">Interest Rate Type</string>
    <string name="interest_type">Interest Type</string>
    <string name="per_month">Per Month</string>
    <string name="per_year">Per Year</string>
    <string name="total_amount">Total Amount</string>
    <string name="interest">Interest</string>
    <string name="until_date">Until Date</string>
    <string name="select_until_date">Select Until Date</string>
    <string name="calculate">Calculate</string>
    <string name="side_business">Side Business</string>
    <string name="home_expenditure">Home Expenditure</string>
    <string name="other_expenditure">Other Expenditure</string>
    <string name="side_expenditure">Side Expenditure</string>
    <string name="side_income">Side Income</string>
    <string name="history">History</string>
    <string name="expenditure">Expenditure</string>
    <string name="income">Income</string>
    <string name="profit">Profit</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="select_paying_date">Select Paying Date</string>
    <string name="pay_history">Pay History</string>
    <string name="get_and_paid_loan_list">Get and Paid Loan List</string>
    <string name="give_and_paid_loan_list">Give and Paid Loan List</string>
    <string name="got_loan">Got Loan</string>
    <string name="paid_interest">Paid Interest</string>
    <string name="paid_loan">Paid Loan</string>
    <string name="given_loan">Given Loan</string>
    <string name="given_loan_interest">Given Loan Interest</string>
    <string name="given_loan_paid">Given Loan Paid</string>
    <string name="history_of_purchase">History of Purchase</string>
    <string name="report_loan">Report Loan</string>
    <string name="loading">Loading</string>
    <string name="please_sign_in_again">Please Sign In Again.</string>
    <string name="saved">Saved</string>
    <string name="person_with_same_name_already_exists">Person With Same Already Exists.</string>
    <string name="phone_number_should_in_10_digits">Phone Number Should In 10 Digits</string>
    <string name="same_already_defined">Same Crop Already Defined.</string>
    <string name="share_must_below_100">Share Percentage Must Below 100</string>
    <string name="partner_does_not_exist">Partner Doesn\'t Exist</string>
    <string name="duplicate_partner_entered">Duplicate Partner Entered</string>
    <string name="please_enter_a_year">Please Enter a Year.</string>
    <string name="first_add_partner">First Add Partner</string>
    <string name="first_add_buyer">First Add Buyer</string>
    <string name="are_you_sure_you_want_undo">Are You Sure Want to Undo!</string>
    <string name="sure">Sure</string>
    <string name="close">Close</string>
    <string name="reaping">Reaping</string>
    <string name="on_a_standing">On A Standing</string>
    <string name="all">ALL</string>
    <string name="self">Self</string>
    <string name="unpaid_amount_by_buyer">Unpaid Amount By Buyer</string>
    <string name="unpaid_amount_for_service_provider">Unpaid Amount For Service Provider</string>
    <string name="first_add_service_provider">First Add Service Provider</string>
    <string name="delete">Delete</string>
    <string name="can_not_delete_bacause_payment_still_remaining">Can Not DELETE because payment still remaining.</string>
    <string name="are_you_sure_you_want_to_delete">Are Sure You Want To Delete</string>
    <string name="deleted">Deleted</string>
    <string name="can_not_delete_bacause_partner_has_share_in_some_crop">Can Not DELETE Because Partner Has Share in Some Crop</string>
    <string name="you_are_removing_some_partners_that_will_cause">You are removing some partners that will cause problem</string>
    <string name="setting">Setting</string>
    <string name="reset_all">Reset All</string>
    <string name="first_add_loan_person">First Add Loan Person.</string>
    <string name="fill_information">Fill Information</string>
    <string name="please_check_any_one">Please Check Any One</string>
    <string name="loan_detail">Loan Detail</string>
    <string name="pay_loan">Pay Loan</string>
    <string name="loan_report">Loan Report</string>
    <string name="this_loan_is_paid">This Loan Is Paid</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="after_last_payment">After Last Payment</string>
    <string name="last_pay_date">Last Pay Date</string>
    <string name="banking">Banking</string>
    <string name="traditional">Traditional</string>
    <string name="undo_loan_message">It Will Subtract It\'s Own Report From Main Report and It Will Result That It Seems Like Loan was not Made.</string>
    <string name="delete_paid_loan_message">Delete Paid Loan and Free Up List.</string>
    <string name="please_wait">Please Wait !!</string>
    <string name="can_not_delete">Can Not Because It is Used.</string>
    <string name="please_fill_correct_value">Please Fill Correct Value</string>
    <string name="default_min_amount" translatable="false">0</string>
    <string name="default_max_amount" translatable="false">1000000000</string>
    <string name="cooming_soon">ComingSoon</string>
    <string name="get_started">Get Started</string>
    <string name="first_open">first_open</string>
    <string name="opened">opened</string>
    <string name="update">Update</string>
</resources>