<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".loans.SingleLoanPerson">
    <Button
        android:id="@+id/filter_loan_list_bt"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="filterLoanList"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:textSize="@dimen/normal_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/paid_loan_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/similar_margin"
            android:layout_weight="1"
            android:ems="10"
            android:checked="true"
            android:fontFamily="@font/acme"
            android:text="@string/paid"
            android:textSize="@dimen/normal_text" />
        <CheckBox
            android:id="@+id/unpaid_loan_check"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:layout_margin="@dimen/similar_margin"
            android:ems="10"
            android:fontFamily="@font/acme"
            android:text="@string/unpaid"
            android:textSize="@dimen/normal_text" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/date_column"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/acme"
            android:text="@string/date"
            android:textColor="@color/simple_text_view_color"
            android:textSize="@dimen/normal_text" />
        <TextView
            android:id="@+id/remark_column"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/acme"
            android:text="@string/remark"
            android:textColor="@color/simple_text_view_color"
            android:textSize="@dimen/normal_text" />
        <TextView
            android:id="@+id/amount_column"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/acme"
            android:text="@string/amount"
            android:textColor="@color/simple_text_view_color"
            android:textSize="@dimen/normal_text" />
        <TextView
            android:id="@+id/loan_person_column"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/acme"
            android:text="@string/loan_person"
            android:textColor="@color/simple_text_view_color"
            android:textSize="@dimen/normal_text" />
    </LinearLayout>

    <ListView
        android:id="@+id/loan_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>